--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   dio: ^5.7.0
   flutter_riverpod: ^2.5.1
   flutter_spinkit: ^5.2.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
